--- a/ProyectoWeb24AM/appsettings.json
+++ b/ProyectoWeb24AM/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RECSTEINS; initial catalog=Ecommer24AM; Integrated Security=True; Encrypt=False"
+    "DefaultConnection": "Data Source=JACOB; initial catalog=Ecommerce; Integrated Security=True; Encrypt=False"
   }
 }
